--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+main
 
 # Test binary, built with `go test -c`
 *.test
@@ -21,4 +22,6 @@
 go.work
 go.work.sum
 
+# Environment Files
 .DS_Store
+.env
