--- a/deploy/components/istio-control-plane/deployments.yaml
+++ b/deploy/components/istio-control-plane/deployments.yaml
@@ -11,15 +11,16 @@ metadata:
     helm.sh/chart: istiod-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     install.operator.istio.io/owning-resource: unknown
     istio: pilot
-    istio.io/rev: default
+    istio.io/rev: gateway
     operator.istio.io/component: Pilot
     release: istio
-  name: istiod
-  namespace: istio-system
+  name: istiod-gateway
+  namespace: istio-gateway
 spec:
   selector:
     matchLabels:
-      istio: pilot
+      app: istiod
+      istio.io/rev: gateway
   strategy:
     rollingUpdate:
       maxSurge: 100%
@@ -39,9 +40,9 @@ spec:
         app.kubernetes.io/version: 1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
         helm.sh/chart: istiod-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
         install.operator.istio.io/owning-resource: unknown
-        istio: pilot
+        istio: istiod
         istio.io/dataplane-mode: none
-        istio.io/rev: default
+        istio.io/rev: gateway
         operator.istio.io/component: Pilot
         sidecar.istio.io/inject: "false"
     spec:
@@ -56,7 +57,7 @@ spec:
         - 30m
         env:
         - name: REVISION
-          value: default
+          value: gateway
         - name: PILOT_CERT_PROVIDER
           value: istiod
         - name: POD_NAME
@@ -77,7 +78,7 @@ spec:
         - name: KUBECONFIG
           value: /var/run/secrets/remote/config
         - name: CA_TRUSTED_NODE_ACCOUNTS
-          value: istio-system/ztunnel
+          value: istio-gateway/ztunnel
         - name: PILOT_TRACE_SAMPLING
           value: "1"
         - name: PILOT_ENABLE_ANALYSIS
@@ -123,7 +124,7 @@ spec:
         resources:
           requests:
             cpu: 500m
-            memory: 1024Mi
+            memory: 2048Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -149,7 +150,7 @@ spec:
         - mountPath: /var/run/secrets/istiod/ca
           name: istio-csr-ca-configmap
           readOnly: true
-      serviceAccountName: istiod
+      serviceAccountName: istiod-gateway
       tolerations:
       - key: cni.istio.io/not-ready
         operator: Exists
