--- a/deploy/components/istio-control-plane/service-accounts.yaml
+++ b/deploy/components/istio-control-plane/service-accounts.yaml
@@ -11,8 +11,7 @@ metadata:
     helm.sh/chart: base-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     release: istio
   name: istio-reader-service-account
-  namespace: istio-system
-
+  namespace: istio-gateway
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -26,5 +25,5 @@ metadata:
     app.kubernetes.io/version: 1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     helm.sh/chart: istiod-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     release: istio
-  name: istiod
-  namespace: istio-system
+  name: istiod-gateway
+  namespace: istio-gateway
