--- a/deploy/components/istio-control-plane/telemetry.yaml
+++ b/deploy/components/istio-control-plane/telemetry.yaml
@@ -3,7 +3,7 @@ apiVersion: telemetry.istio.io/v1
 kind: Telemetry
 metadata:
   name: mesh-default
-  namespace: istio-system
+  namespace: istio-gateway
 spec:
   accessLogging:
   - providers:
