squash! feat: revision isolated istio control plane for gateway api
updated namespace and revision to be more project specific

--- a/deploy/components/inference-gateway/gateways.yaml
+++ b/deploy/components/inference-gateway/gateways.yaml
@@ -3,7 +3,7 @@ kind: Gateway
 metadata:
   name: inference-gateway
   labels:
-    istio.io/rev: gateway
+    istio.io/rev: llm-d-gateway
 spec:
   listeners:
   - name: default
