--- a/deploy/components/istio-control-plane/service-accounts.yaml
+++ b/deploy/components/istio-control-plane/service-accounts.yaml
@@ -11,7 +11,7 @@ metadata:
     helm.sh/chart: base-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     release: istio
   name: istio-reader-service-account
-  namespace: istio-gateway
+  namespace: llm-d-istio-system
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -25,5 +25,5 @@ metadata:
     app.kubernetes.io/version: 1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     helm.sh/chart: istiod-1.26-alpha.9befed2f1439d883120f8de70fd70d84ca0ebc3d
     release: istio
-  name: istiod-gateway
-  namespace: istio-gateway
+  name: istiod-llm-d-gateway
+  namespace: llm-d-istio-system
