--- a/scripts/istio/istio-cp.yaml
+++ b/scripts/istio/istio-cp.yaml
@@ -2,7 +2,7 @@ apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
   profile: default
-  revision: gateway
+  revision: llm-d-gateway
   components:
     ingressGateways:
       - name: istio-ingressgateway
