squash! feat: revision isolated istio control plane for gateway api
lower memory request

--- a/scripts/istio/istio-cp.yaml
+++ b/scripts/istio/istio-cp.yaml
@@ -4,6 +4,11 @@ spec:
   profile: default
   revision: llm-d-gateway
   components:
+    pilot:
+      k8s:
+        resources:
+          requests:
+            memory: 1024Mi
     ingressGateways:
       - name: istio-ingressgateway
         enabled: false
