--- a/deploy/components/istio-control-plane/kustomization.yaml
+++ b/deploy/components/istio-control-plane/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- namespaces.yaml
 - configmaps.yaml
 - deployments.yaml
 - hpa.yaml
