--- a/.tekton/go-test-task.yaml
+++ b/.tekton/go-test-task.yaml
@@ -18,5 +18,21 @@ spec:
         ginkgo version
         cd $(workspaces.source.path)
         echo "Running tests with Ginkgo..."
+        
+        echo "🔐 Extracting Git credentials from workspace..."
+        GIT_USER=$(cat /workspace/git-auth/username)
+        GIT_TOKEN=$(cat /workspace/git-auth/token)
+
+        if [ -z "$GIT_USER" ] || [ -z "$GIT_TOKEN" ]; then
+          echo "❌ Error: Missing git-auth credentials"
+          exit 1
+        fi
+
+        echo "🔐 Configuring Git..."
+        git config --global user.email "ci-tag-bot@example.com"
+        git config --global user.name "ci-tag-bot"
+        git config --global url."https://${GIT_USER}:${GIT_TOKEN}@github.com".insteadOf "https://github.com"
+        git config --global --add safe.directory "$(pwd)"
+        
         go env -w GOFLAGS=-buildvcs=false
         make test
