fix: move istio rev label on gw to env
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/deploy/environments/dev/kind-istio/patch-gateways.yaml
+++ b/deploy/environments/dev/kind-istio/patch-gateways.yaml
@@ -4,6 +4,7 @@ metadata:
   name: inference-gateway
   labels:
     istio.io/enable-inference-extproc: "true"
+    istio.io/rev: llm-d-gateway
   annotations:
     networking.istio.io/service-type: ClusterIP
 spec:
