chore: switch to quay.io for control-plane components
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/deploy/components/istio-control-plane/configmaps.yaml
+++ b/deploy/components/istio-control-plane/configmaps.yaml
@@ -1901,7 +1901,7 @@ data:
           }
         },
         "externalIstiod": false,
-        "hub": "gcr.io/istio-testing",
+        "hub": "quay.io/rh-ee-sutt/istio-testing",
         "imagePullPolicy": "",
         "imagePullSecrets": [],
         "istioNamespace": "llm-d-istio-system",
