test: add integration tests to CI
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/.tekton/pipelinerun.yaml
+++ b/.tekton/pipelinerun.yaml
@@ -153,6 +153,8 @@ spec:
         workspaces:
           - name: source
             workspace: source
+          - name: registry
+            workspace: registry-secret
           - name: git-auth
             workspace: git-auth
 
