--- a/.tekton/go-test-task.yaml
+++ b/.tekton/go-test-task.yaml
@@ -64,7 +64,7 @@ spec:
 
         echo "Pulling the vllm simulator image"
         podman login ghcr.io --username ${QUAY_USERNAME} --password ${QUAY_PASSWORD}
-        podman pull ghcr.io/llm-d/vllm-sim:0.0.4
+        podman pull ghcr.io/llm-d/llm-d-inference-sim:0.0.4
 
         echo "Setting up a Kind cluster for integration tests"
         export CONTAINER_TOOL=podman
