--- a/deploy/components/vllm-sim/deployments.yaml
+++ b/deploy/components/vllm-sim/deployments.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vllm
-        image: ghcr.io/llm-d/vllm-sim:latest
+        image: ghcr.io/llm-d/llm-d-inference-sim:latest
         imagePullPolicy: IfNotPresent
         args:
         - "--port=8000"
