--- a/deploy/components/vllm-sim/kustomization.yaml
+++ b/deploy/components/vllm-sim/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
 - deployments.yaml
 
 images:
-- name: ghcr.io/llm-d/vllm-sim
+- name: ghcr.io/llm-d/llm-d-inference-sim
   newTag: 0.0.4
