--- a/deploy/components/vllm-sim/deployments.yaml
+++ b/deploy/components/vllm-sim/deployments.yaml
@@ -21,6 +21,11 @@ spec:
         args:
         - "--port=8000"
         - "--model=${MODEL_NAME}"
+        - "--enable-kvcache=${KV_CACHE_ENABLED}"
+        - "--kv-cache-size=1024"
+        - "--block-size=16"
+        - "--zmq-endpoint=tcp://${EPP_NAME}.default.svc.cluster.local:5557"
+        - "--event-batch-size=16"
         ports:
         - name: http
           containerPort: 8000
@@ -28,3 +33,6 @@ spec:
         env:
         - name: PORT
           value: "8000"
+        - name: PYTHONHASHSEED
+          value: "42"
+
