Implement qos filtering
Signed-off-by: David Walthier <walthierdavid42@gmail.com>

--- a/deploy/config/epp-estimate-prefix-cache-config.yaml
+++ b/deploy/config/epp-estimate-prefix-cache-config.yaml
@@ -8,9 +8,11 @@ plugins:
 - type: prefix-cache-scorer
 - type: load-aware-scorer
 - type: max-score-picker
+- type: qos-filter
 schedulingProfiles:
 - name: default
   plugins:
+  - pluginRef: qos-filter
   - pluginRef: decode-filter
   - pluginRef: prefix-cache-scorer
     weight: 1.0
