--- a/deploy/config/epp-config.yaml
+++ b/deploy/config/epp-config.yaml
@@ -7,9 +7,11 @@ plugins:
 - type: decode-filter
 - type: max-score-picker
 - type: single-profile-handler
+- type: qos-filter
 schedulingProfiles:
 - name: default
   plugins:
+  - pluginRef: qos-filter
   - pluginRef: decode-filter
   - pluginRef: max-score-picker
   - pluginRef: prefix-cache-scorer
